<resources>
    <string name="app_name">demo_android</string>
    <string name="welcome_sign_in">Welcome to 4In Shield! \n Sign in to continue</string>
    <string name="new_account_signin"><u>No account? Sign up</u></string>
    <string name="forget_password"><u>Forgot password?</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="i_herby_accept_terms_and_conditions">I herby accept <u>terms and conditions</u></string>
    <string name="who_is_going_to_use_this_device">Who is going to use \nthis device</string>
    <string name="welcome_to_4in_shield">Welcome to 4IN Shield</string>
    <string name="start">Start</string>
    <string name="please_add_your_child_s_devices">Please add your child’s \ndevices</string>
    <string name="the_information_from_your_child_s_device_will_help_us_to_assess_their_mental_health_duration_of_sleep_places_visited_used_applications_etc_it_also_gives_you_the_ability_to_block_or_allow_installed_applications">The information from your child’s device will help us to assess their mental health, duration of sleep, places visited, used applications etc. It also gives you the ability to block or allow installed applications</string>
    <string name="please_follow_the_following_steps">Please follow the following steps:</string>
    <string name="_1_bring_your_child_s_mobile_phone">1. Bring your child’s mobile phone</string>
    <string name="_2_scan_this_qr_code_with_your_child_s_device_camera">2. Scan this QR code with your child’s device camera</string>
    <string name="_3_you_will_be_redirected_to_the_4in_shield_application_download_page">3. You will be redirected to the 4IN shield application download page</string>
    <string name="_4_once_the_application_is_installed_click_next">4. Once the application is installed, click Next</string>
    <string name="please_enter_your_child_s_social_media_account_information">Please enter your child’s social \nmedia account information</string>
    <string name="social_network_platform_drop_down">Social network platform (Drop down)</string>
    <string name="social_network_user_name">Social network user name</string>
    <string name="social_network_page_url">Social network page URL</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="your_child_s_profile_information_has_been_successfully_added">Your child’s profile \ninformation has been \nsuccessfully added</string>
    <string name="add_new_profile">Add new Profile</string>
    <string name="continue_txt">Continue</string>
    <string name="modify_profile_information">Modify profile information</string>
    <string name="please_enter_the_required_information_to_complete_your_child_s_profile">Please enter the required \ninformation to complete \nyour child’s profile</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="you_have_successfully_completed_you_child_profile">You have successfully \ncompleted you child \nprofile.</string>
    <string name="congradulation">Congradulation!</string>
    <string name="add_another_child">Add another child</string>
    <string name="thank_you_for_your_confidence_in_us">Thank you for your \nconfidence in us.</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="child_first_name">Child first name</string>
    <string name="parental_control">Parental Control</string>
    <string name="dashbaord">Dashbaord</string>
    <string name="phone_usage">Phone usage</string>
    <string name="social_media">Social media</string>
    <string name="alerts">Alerts</string>
    <string name="first_name_last_name">First name Last name</string>
    <string name="age">Age</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="last_night_sleep_duration">Last night Sleep \nduration</string>
    <string name="device_usage">Device usage</string>
    <string name="phone_call_duration">Phone call duration</string>
    <string name="mama_always_said_life_was_like_a_box_of_chocolates_you_never_know_what">Mama always said life was like a box of chocolates. You never know what…</string>
    <string name="_12_34_pm">12:34 PM</string>
    <string name="high">High</string>
    <string name="toxic_comment">Toxic comment!</string>
    <string name="sleep_depreviation">Sleep depreviation!</string>
    <string name="last_social_media_activites">Last social media activites</string>
    <string name="rebecca_morgan">Rebecca Morgan</string>
    <string name="justin_holmes">Justin Holmes</string>

</resources>