<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/primary_color"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_add_your_child_s_devices"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/abel_regular"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_information_from_your_child_s_device_will_help_us_to_assess_their_mental_health_duration_of_sleep_places_visited_used_applications_etc_it_also_gives_you_the_ability_to_block_or_allow_installed_applications"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="22dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_follow_the_following_steps"
                android:textColor="@color/white"
                android:textAlignment="viewStart"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="22dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_bring_your_child_s_mobile_phone"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="22dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_scan_this_qr_code_with_your_child_s_device_camera"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="22dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_you_will_be_redirected_to_the_4in_shield_application_download_page"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="22dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_once_the_application_is_installed_click_next"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="22dp"
                android:textSize="18sp"/>
            <ImageView
                android:layout_width="206dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/bar_code_img"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_height="169dp"/>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnSkip"
                    android:layout_width="111dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/skip"
                            android:fontFamily="@font/abel_regular"
                            android:textColor="@color/primary_color"
                            android:textSize="18sp"/>



                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="45dp"
                    android:layout_height="0dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNext"
                    android:layout_width="111dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/next"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="@font/abel_regular"
                            android:textColor="@color/primary_color"
                            android:textSize="18sp"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:gravity="center_vertical"
                            android:paddingTop="10px"
                            android:paddingBottom="10px"
                            android:src="@drawable/arrow_forward" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>