<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/primary_color"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="134dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_marginTop="42dp"
                android:src="@drawable/add_profile_img"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_child_s_social_media_account_information"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:lineSpacingExtra="5sp"
                android:fontFamily="@font/abel_regular"
                android:textSize="22sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/abel_regular"
                android:hint="@string/social_network_platform_drop_down"
                android:padding="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="40dp"
                android:textSize="14sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/abel_regular"
                android:hint="@string/social_network_user_name"
                android:padding="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="40dp"
                android:textSize="14sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/abel_regular"
                android:hint="@string/social_network_page_url"
                android:padding="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="40dp"
                android:textSize="14sp"
                />


            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnSkip"
                    android:layout_width="111dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="@font/abel_regular"
                            android:text="@string/skip"
                            android:textColor="@color/primary_color"
                            android:textSize="18sp" />



                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <View
                    android:layout_width="45dp"
                    android:layout_height="0dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNext"
                    android:layout_width="111dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/next"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="@font/abel_regular"
                            android:textColor="@color/primary_color"
                            android:textSize="18sp"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:gravity="center_vertical"
                            android:paddingTop="10px"
                            android:paddingBottom="10px"
                            android:src="@drawable/arrow_forward" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>